--- a/templates/Homepage.twig
+++ b/templates/Homepage.twig
@@ -71,197 +71,21 @@
     <div class="container">
         <div class="tile">
             <div class="tile is-parent is-paddingless">
-                <div class="card tile is-vertical is-child is-4">
-                    <div class="card-image">
-                        <figure class="image is-256x256">
-                            <img src="https://pbs.twimg.com/media/DFmNkjvU0AAYixV.jpg" alt="Sample image1">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content">
-                                <p class="title is-4 is-marginless">Nike Flyknit Trainer</p>
-                                <p class="subtitle is-6 is-marginless"><span class="product-price">€150,-</span></p>
-                                <p class="subtitle is-6"><span class="release-date">Release date: <b>24/07/2018</b></span></p>
+                {% for product in products %}
+                    {% include 'ProductCard.twig' with {
+                        'product_name': product.name,
+                        'price': product.price,
+                        'image': product.image,
+                        'release_date': product.release_date
+                    } %}
+
+                    {% if loop.index % 3 == 0 %}
                             </div>
                         </div>
-                        <div class="content">
-                            <p class="is-marginless available">Available at:</p>
-                            <a class ="website">website</a> | <a class ="website">website</a> | <a class ="website">website</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card tile is-vertical is-child is-4">
-                    <div class="card-image">
-                        <figure class="image">
-                            <img src="https://c.static-nike.com/a/images/t_PDP_864_v1/f_auto/zwnqu2emjltkspwxjcvs/air-max-93-herenschoen-CJ5htx.jpg"
-                                 alt="Sample image2">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content">
-                                <p class="title is-4 is-marginless">Nike Air Max 93</p>
-                                <p class="subtitle is-6 is-marginless"><span class="product-price">€145,-</span></p>
-                                <p class="subtitle is-6"><span class="release-date">Release date: <b>27/07/2018</b></span></p>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <p class="is-marginless available">Available at:</p>
-                            <a class="website">website</a> | <a class="website">website</a> | <a class="website">website</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card tile is-vertical is-child is-4">
-                    <div class="card-image">
-                        <figure class="image is-256x256">
-                            <img src="https://pbs.twimg.com/media/DFmNkjvU0AAYixV.jpg" alt="Sample image1">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content">
-                                <p class="title is-4 is-marginless">Nike Flyknit Trainer</p>
-                                <p class="subtitle is-6 is-marginless"><span class="product-price">€150,-</span></p>
-                                <p class="subtitle is-6"><span class="release-date">Release date: <b>24/07/2018</b></span></p>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <p class="is-marginless available">Available at:</p>
-                            <a class="website">website</a> | <a class="website">website</a> | <a class="website">website</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="tile">
-            <div class="tile is-parent is-paddingless">
-                <div class="card tile is-vertical is-child is-4">
-                    <div class="card-image">
-                        <figure class="image is-256x256">
-                            <img src="https://pbs.twimg.com/media/DFmNkjvU0AAYixV.jpg" alt="Sample image1">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content">
-                                <p class="title is-4 is-marginless">Nike Flyknit Trainer</p>
-                                <p class="subtitle is-6 is-marginless"><span class="product-price">€150,-</span></p>
-                                <p class="subtitle is-6"><span class="release-date">Release date: <b>24/07/2018</b></span></p>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <p class="is-marginless available">Available at:</p>
-                            <a class ="website">website</a> | <a class ="website">website</a> | <a class ="website">website</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card tile is-vertical is-child is-4">
-                    <div class="card-image">
-                        <figure class="image">
-                            <img src="https://c.static-nike.com/a/images/t_PDP_864_v1/f_auto/zwnqu2emjltkspwxjcvs/air-max-93-herenschoen-CJ5htx.jpg"
-                                 alt="Sample image2">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content">
-                                <p class="title is-4 is-marginless">Nike Air Max 93</p>
-                                <p class="subtitle is-6 is-marginless"><span class="product-price">€145,-</span></p>
-                                <p class="subtitle is-6"><span class="release-date">Release date: <b>27/07/2018</b></span></p>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <p class="is-marginless available">Available at:</p>
-                            <a class="website">website</a> | <a class="website">website</a> | <a class="website">website</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card tile is-vertical is-child is-4">
-                    <div class="card-image">
-                        <figure class="image is-256x256">
-                            <img src="https://pbs.twimg.com/media/DFmNkjvU0AAYixV.jpg" alt="Sample image1">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content">
-                                <p class="title is-4 is-marginless">Nike Flyknit Trainer</p>
-                                <p class="subtitle is-6 is-marginless"><span class="product-price">€150,-</span></p>
-                                <p class="subtitle is-6"><span class="release-date">Release date: <b>24/07/2018</b></span></p>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <p class="is-marginless available">Available at:</p>
-                            <a class="website">website</a> | <a class="website">website</a> | <a class="website">website</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="tile">
-            <div class="tile is-parent is-paddingless">
-                <div class="card tile is-vertical is-child is-4">
-                    <div class="card-image">
-                        <figure class="image is-256x256">
-                            <img src="https://pbs.twimg.com/media/DFmNkjvU0AAYixV.jpg" alt="Sample image1">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content">
-                                <p class="title is-4 is-marginless">Nike Flyknit Trainer</p>
-                                <p class="subtitle is-6 is-marginless"><span class="product-price">€150,-</span></p>
-                                <p class="subtitle is-6"><span class="release-date">Release date: <b>24/07/2018</b></span></p>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <p class="is-marginless available">Available at:</p>
-                            <a class ="website">website</a> | <a class ="website">website</a> | <a class ="website">website</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card tile is-vertical is-child is-4">
-                    <div class="card-image">
-                        <figure class="image">
-                            <img src="https://c.static-nike.com/a/images/t_PDP_864_v1/f_auto/zwnqu2emjltkspwxjcvs/air-max-93-herenschoen-CJ5htx.jpg"
-                                 alt="Sample image2">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content">
-                                <p class="title is-4 is-marginless">Nike Air Max 93</p>
-                                <p class="subtitle is-6 is-marginless"><span class="product-price">€145,-</span></p>
-                                <p class="subtitle is-6"><span class="release-date">Release date: <b>27/07/2018</b></span></p>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <p class="is-marginless available">Available at:</p>
-                            <a class="website">website</a> | <a class="website">website</a> | <a class="website">website</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card tile is-vertical is-child is-4">
-                    <div class="card-image">
-                        <figure class="image is-256x256">
-                            <img src="https://pbs.twimg.com/media/DFmNkjvU0AAYixV.jpg" alt="Sample image1">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-content">
-                                <p class="title is-4 is-marginless">Nike Flyknit Trainer</p>
-                                <p class="subtitle is-6 is-marginless"><span class="product-price">€150,-</span></p>
-                                <p class="subtitle is-6"><span class="release-date">Release date: <b>24/07/2018</b></span></p>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <p class="is-marginless available">Available at:</p>
-                            <a class="website">website</a> | <a class="website">website</a> | <a class="website">website</a>
-                        </div>
-                    </div>
-                </div>
+                        <div class="tile">
+                            <div class="tile is-parent is-paddingless">
+                    {% endif %}
+                {% endfor %}
             </div>
         </div>
         <nav class="pagination is-small" role="navigation" aria-label="pagination">
